--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
-		</dependency>
-
-		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
@@ -60,7 +54,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>16.0.1</version>
+			<version>19.0</version>
 		</dependency>
 
 		<dependency>
@@ -98,7 +92,7 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		
 		<!-- spring aop -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -139,6 +133,13 @@
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		
+		<!-- spring websocket -->
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-websocket</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
 		<!-- spring end -->
 
 		<!-- hibernate -->
@@ -160,7 +161,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<version>5.2.4.Final</version>
 		</dependency>
 		<!-- hibernate end -->
 
@@ -184,12 +185,20 @@
 			</exclusions>
 		</dependency>
 
-		<!-- mysql -->
+		<!-- sqlite -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.8.11.2</version>
 		</dependency>
+
+		<!-- sqlite dialect for hibernate4 -->
+		<dependency>
+			<groupId>com.enigmabridge</groupId>
+			<artifactId>hibernate4-sqlite-dialect</artifactId>
+			<version>0.1.2</version>
+		</dependency>
+
 
 		<!-- shiro -->
 		<dependency>
